--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -48,7 +48,7 @@
 		<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 		<script src="bower_components/angular-animate/angular-animate.js"></script>
 		<script src="bower_components/angular-touch/angular-touch.js"></script>
-		<script src="bower_components/artyom.js/src/artyom.js"></script>
+		<script src="bower_components/artyom.js/artyom.js"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
 
