--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -1,66 +1,66 @@
 <!DOCTYPE html>
 <html class="no-js" ng-app="etherac">
-	<head>
-		<base href="/">
-		<meta charset="utf-8">
-		<meta name="description" content="Voice Controlled Media Player">
-		<meta name="viewport" content="width=device-width">
-		<title>etherac | {{pageTitle}}</title>
-		<!-- build:css(.) css/vendor.css -->
-	    <!-- bower:css -->
-	    <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css" />
-	    <!-- endbower -->
-	    <!-- endbuild -->
-	    <!-- build:css(.tmp) css/styles.css -->
-	    <link rel="stylesheet" href="css/styles.css">
-	    <!-- endbuild -->
-	</head>
-	<body>
-		<!--[if lt IE 7]>
-	    	<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-	    <![endif]-->
+<head>
+	<base href="/">
+	<meta charset="utf-8">
+	<meta name="description" content="Voice Controlled Media Player">
+	<meta name="viewport" content="width=device-width">
+	<title>etherac | {{pageTitle}}</title>
+	<!-- build:css(.) css/vendor.css -->
+	<!-- bower:css -->
+	<link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css" />
+	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+	<!-- endbower -->
+	<!-- endbuild -->
+	<!-- build:css(.tmp) css/styles.css -->
+	<link rel="stylesheet" href="css/styles.css">
+	<!-- endbuild -->
+</head>
+<body>
+	<!--[if lt IE 7]>
+	<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+	<![endif]-->
+	<div>
+		<div ng-include src="'views/header.html'"></div>
+		<div ng-view=""></div>
+		<div ng-include src="'views/footer.html'"></div>
+	</div>
 
+	<!-- build:js(.) js/oldieshim.js -->
+	<!--[if lt IE 9]>
+	<script src="bower_components/es5-shim/es5-shim.js"></script>
+	<script src="bower_components/json3/lib/json3.js"></script>
+	<![endif]-->
+	<!-- endbuild -->
 
-	    <div>
-		    <div ng-include src="'views/header.html'"></div>
-		    <div ng-view=""></div>
-		    <div ng-include src="'views/footer.html'"></div>
-		</div>
+	<!-- build:js(.) js/vendor.js -->
+	<!-- bower:js -->
+	<script src="bower_components/jquery/dist/jquery.js"></script>
+	<script src="bower_components/angular/angular.js"></script>
+	<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+	<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+	<script src="bower_components/angular-route/angular-route.js"></script>
+	<script src="bower_components/angular-resource/angular-resource.js"></script>
+	<script src="bower_components/angular-cookies/angular-cookies.js"></script>
+	<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+	<script src="bower_components/lodash/dist/lodash.compat.js"></script>
+	<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+	<script src="bower_components/angular-animate/angular-animate.js"></script>
+	<script src="bower_components/angular-touch/angular-touch.js"></script>
+	<script src="bower_components/artyom.js/artyom.js"></script>
+	<!-- endbower -->
+	<!-- endbuild -->
 
-		<!-- build:js(.) js/oldieshim.js -->
-		<!--[if lt IE 9]>
-		<script src="bower_components/es5-shim/es5-shim.js"></script>
-		<script src="bower_components/json3/lib/json3.js"></script>
-		<![endif]-->
-		<!-- endbuild -->
-
-		<!-- build:js(.) js/vendor.js -->
-		<!-- bower:js -->
-		<script src="bower_components/jquery/dist/jquery.js"></script>
-		<script src="bower_components/angular/angular.js"></script>
-		<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-		<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-		<script src="bower_components/angular-route/angular-route.js"></script>
-		<script src="bower_components/angular-resource/angular-resource.js"></script>
-		<script src="bower_components/angular-cookies/angular-cookies.js"></script>
-		<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-		<script src="bower_components/lodash/dist/lodash.compat.js"></script>
-		<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-		<script src="bower_components/angular-animate/angular-animate.js"></script>
-		<script src="bower_components/angular-touch/angular-touch.js"></script>
-		<script src="bower_components/artyom.js/artyom.js"></script>
-		<!-- endbower -->
-		<!-- endbuild -->
-
-		<!-- build:js({.tmp,app/frontend}) js/scripts.js -->
-		<script src="js/app.js"></script>
-		<script src="js/services/InterceptorService.js"></script>
-		<script src="js/services/ApiService.js"></script>
-		<script src="js/services/SpeechService.js"></script>
-		<script src="js/controllers/main.js"></script>
-		<script src="js/controllers/admin.js"></script>
-		<script src="js/controllers/auth.js"></script>
-		<script src="js/controllers/404.js"></script>
-		<!-- endbuild -->
-	</body>
+	<!-- build:js({.tmp,app/frontend}) js/scripts.js -->
+	<script src="js/app.js"></script>
+	<script src="js/services/InterceptorService.js"></script>
+	<script src="js/services/ApiService.js"></script>
+	<script src="js/services/DataService.js"></script>
+	<script src="js/services/SpeechService.js"></script>
+	<script src="js/controllers/main.js"></script>
+	<script src="js/controllers/admin.js"></script>
+	<script src="js/controllers/auth.js"></script>
+	<script src="js/controllers/404.js"></script>
+	<!-- endbuild -->
+</body>
 </html>
