now playing is working

--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -10,11 +10,13 @@
 	<!-- bower:css -->
 	<link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css" />
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+	<link rel="stylesheet" href="bower_components/jPlayer/dist/skin/pink.flag/jplayer.pink.flag.css" />
 	<!-- endbower -->
 	<!-- endbuild -->
 	<!-- build:css(.tmp) css/styles.css -->
 	<link rel="stylesheet" href="css/styles.css">
 	<!-- endbuild -->
+	<link rel="stylesheet" href="bower_components/jPlayer/dist/skin/blue.monday/css/jplayer.blue.monday.css" />
 </head>
 <body>
 	<!--[if lt IE 7]>
@@ -48,9 +50,10 @@
 	<script src="bower_components/angular-animate/angular-animate.js"></script>
 	<script src="bower_components/angular-touch/angular-touch.js"></script>
 	<script src="bower_components/artyom.js/artyom.js"></script>
+	<script src="bower_components/jPlayer/dist/jplayer/jquery.jplayer.js"></script>
 	<!-- endbower -->
 	<!-- endbuild -->
-
+	<script src="bower_components/jPlayer/dist/add-on/jplayer.playlist.js"></script>
 	<!-- build:js({.tmp,app/frontend}) js/scripts.js -->
 	<script src="js/app.js"></script>
 	<script src="js/services/InterceptorService.js"></script>
@@ -61,6 +64,7 @@
 	<script src="js/controllers/admin.js"></script>
 	<script src="js/controllers/auth.js"></script>
 	<script src="js/controllers/404.js"></script>
+	<script src="js/controllers/musicLib.js"></script>
 	<!-- endbuild -->
 </body>
 </html>
