talk to me I listen

--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -60,6 +60,7 @@
 	<script src="js/services/ApiService.js"></script>
 	<script src="js/services/DataService.js"></script>
 	<script src="js/services/SpeechService.js"></script>
+	<script src="js/services/MusicService.js"></script>
 	<script src="js/controllers/main.js"></script>
 	<script src="js/controllers/admin.js"></script>
 	<script src="js/controllers/auth.js"></script>
