--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -51,6 +51,7 @@
 	<script src="bower_components/angular-touch/angular-touch.js"></script>
 	<script src="bower_components/artyom.js/artyom.js"></script>
 	<script src="bower_components/jPlayer/dist/jplayer/jquery.jplayer.js"></script>
+	<script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
 	<!-- endbower -->
 	<!-- endbuild -->
 	<script src="bower_components/jPlayer/dist/add-on/jplayer.playlist.js"></script>
